salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/Wellness_Assessment__c.object-meta.xml
<CustomObject>
    <description>Records health check-ins, biometrics, and subjective data for patient longitudinal tracking.</description>
    <label>Wellness Assessment</label>
    <nameField>
        <displayFormat>WA-{000000}</displayFormat>
        <label>Wellness Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wellness Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>