salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <formula>IF(OR(ISNULL(Weight_kg__c), ISNULL(Height_cm__c), Height_cm__c = 0), null, Weight_kg__c / ((Height_cm__c/100) ^ 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>