salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Contraindication_Active_Malignancy__c.field-meta.xml
<CustomField>
    <fullName>Contraindication_Active_Malignancy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active Cancer or History of Malignancy in last 5 years?</description>
    <label>Active Cancer / Malignancy History?</label>
    <type>Checkbox</type>
</CustomField>