salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Contraindication_Family_MTC_MEN2__c.field-meta.xml
<CustomField>
    <fullName>Contraindication_Family_MTC_MEN2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Personal or Family History of MTC (Medullary Thyroid Carcinoma) or MEN2?</description>
    <label>History of MTC or MEN2?</label>
    <type>Checkbox</type>
</CustomField>