salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Contraindication_Insulin_Use__c.field-meta.xml
<CustomField>
    <fullName>Contraindication_Insulin_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Current Insulin Use?</description>
    <label>Current Insulin Use?</label>
    <type>Checkbox</type>
</CustomField>