salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Contraindication_Pancreatitis__c.field-meta.xml
<CustomField>
    <fullName>Contraindication_Pancreatitis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>History of Pancreatitis?</description>
    <label>History of Pancreatitis?</label>
    <type>Checkbox</type>
</CustomField>