salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Contraindication_Pregnancy__c.field-meta.xml
<CustomField>
    <fullName>Contraindication_Pregnancy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you currently pregnant or breastfeeding?</description>
    <label>Pregnancy / Breastfeeding?</label>
    <type>Checkbox</type>
</CustomField>