salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Current_Medications__c.field-meta.xml
<CustomField>
    <fullName>Current_Medications__c</fullName>
    <label>Current Medications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>