salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Referring Doctor for this assessment. Forced update.</description>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Wellness Assessments</relationshipLabel>
    <relationshipName>Wellness_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>