salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Doctor_Slug_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Slug_Hidden__c</fullName>
    <description>Hidden field used by the LWC to pass the referral slug (?ref=) to the back-end Flow for doctor linking.</description>
    <label>Doctor Slug (Hidden)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>