salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Energy_Level__c.field-meta.xml
<CustomField>
    <fullName>Energy_Level__c</fullName>
    <inlineHelpText>On a scale of 1-10, how is your energy level?</inlineHelpText>
    <label>Energy Level (1-10)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>