salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Food_Noise_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Food_Noise_Frequency__c</fullName>
    <inlineHelpText>How often do you think about food?</inlineHelpText>
    <label>Food Noise Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>Constantly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>