salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Height_cm__c.field-meta.xml
<CustomField>
    <fullName>Height_cm__c</fullName>
    <label>Height (cm)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>