salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Injury_Pain_Level__c.field-meta.xml
<CustomField>
    <fullName>Injury_Pain_Level__c</fullName>
    <inlineHelpText>On a scale of 1-10, how is your pain level?</inlineHelpText>
    <label>Injury / Pain Level (1-10)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>