salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Intake_Slug_Capture__c.field-meta.xml
<CustomField>
    <fullName>Intake_Slug_Capture__c</fullName>
    <description>Temporary storage for the Doctor Slug from the web form, used by Flow to link the correct Doctor.</description>
    <label>Intake Slug Capture</label>
    <length>100</length>
    <type>Text</type>
</CustomField>