salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Wellness Assessments</relationshipLabel>
    <relationshipName>Wellness_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>