salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
                <default>true</default>
                <label>Baseline</label>
            </value>
            <value>
                <fullName>Day 21 Update</fullName>
            </value>
            <value>
                <fullName>Ad-Hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>