salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Waist_Circumference_cm__c.field-meta.xml
<CustomField>
    <fullName>Waist_Circumference_cm__c</fullName>
    <label>Waist Circumference (cm)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>