salesforce-org/org-backup/force-app/main/default/objects/Wellness_Assessment__c/fields/Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_kg__c</fullName>
    <label>Weight (kg)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>